--- a/page5.html
+++ b/page5.html
@@ -22,6 +22,22 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120007354-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120007354-1');
+</script>
+
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qSdoPuG9qQ" once="menu" id="menu1-2x">
 
     
@@ -48,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/c">web builder</a></section><section class="mbr-section content4 cid-qRv4GvbTaf" id="content4-1w">
+<section class="engine"><a href="https://mobirise.me/s">bootstrap theme</a></section><section class="mbr-section content4 cid-qRv4GvbTaf" id="content4-1w">
 
     
 
