--- a/page8.html
+++ b/page8.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">html5 templates</a></section><section class="mbr-section content4 cid-qRytHfmrEg" id="content4-2h">
+<section class="engine"><a href="https://mobirise.me/o">one page website templates</a></section><section class="mbr-section content4 cid-qRytHfmrEg" id="content4-2h">
 
     
 
@@ -98,7 +98,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cDjD17ZAAerFPSy24X5/Bi53a/RM8FUPuFPyQeSjH/SI+a/kp5FQ0aVuM4alI2BEWBwaDsLU4sfmvO9QHYQKuw4wrMMpoZdkx1PSd1BPrLZDQ4k7F03AXHoTkpfLUbTI" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A+MdotxtqcM9FhI8e4uXlwQjPJOEO4LCNN0pRP/xRmJ2QvJ9wdBBiFn6v0WGJQVvqJsIHOt2KfzaJl9knTWXMbMhSzFwedxPdpjFgkocmtaWVYh/FPzVjO1JrMNgSLhL" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
